compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__records__gleam_record_to_union_type.snap
---
source: compiler-core/src/fsharp/tests/records.rs
expression: "\n    pub type Foo {\n        Bar(name: String, age: Int)\n        Baz(quux: Int)\n    }\n"
---
module rec my.``mod``
type Foo =
| Bar of name: string * age: int64
| Baz of quux: int64
