compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__records__gleam_record_to_union_type_with_getters.snap
---
source: compiler-core/src/fsharp/tests/records.rs
expression: "\n    pub type Foo {\n        Bar(name: String, age: Int)\n        Quux(name: String)\n    }\n"
---
module rec my.``mod``
type Foo =
| Bar of name: string * age: int64
| Quux of name: string
    member this.name = 
        match this with
        | Foo.Bar (name, _) -> name
        | Foo.Quux (name) -> name
