compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__records__record_accessor_multiple_variants.snap
---
source: compiler-core/src/fsharp/tests/records.rs
expression: "\npub type Person {\n    Teacher(name: String, title: String)\n    Student(name: String, age: Int)\n}\npub fn get_name(person: Person) { person.name }"
---
module rec my.``mod``

type Person =
| Student of name: string * age: int64
| Teacher of name: string * title: string
    member this.name = 
        match this with
        | Person.Student (name, _) -> name
        | Person.Teacher (name, _) -> name
let get_name (person: Person) = begin
    person.name
end
