compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__records__record_accessor_multiple_with_first_position_different_types.snap
---
source: compiler-core/src/fsharp/tests/records.rs
expression: "\npub type Person {\n    Teacher(name: Nil, age: Int)\n    Student(name: String, age: Int)\n}\npub fn get_age(person: Person) { person.age }"
---
module rec my.``mod``
type Person =
| Student of name: string * age: int
| Teacher of name: unit * age: int
    member this.age = 
        match this with
        | Person.Student (_, age) -> age
        | Person.Teacher (_, age) -> age
let get_age (person: Person) = begin
    person.age
end
