compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__records__record_constants.snap
---
source: compiler-core/src/fsharp/tests/records.rs
expression: "pub type Test { A }\nconst some_test = A\npub fn a() { A }"
---
module rec my.``mod``
type Test =
| A
    
let a () = begin
    A
end
let private some_test = A
