compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__records__record_spread.snap
---
source: compiler-core/src/fsharp/tests/records.rs
expression: "\ntype Triple {\n    Triple(a: Int, b: Int, c: Int)\n}\n\nfn foo() {\n  let triple = Triple(1,2,3)\n  let Triple(the_a, ..) = triple\n  the_a\n}\n"
---
module rec my.``mod``
type private Triple = { a: int64; b: int64; c: int64 }
let private foo () = begin
    let triple = { a = 1L; b = 2L; c = 3L }
    let { a = the_a } = triple
    the_a
end
