compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__records__record_spread2.snap
---
source: compiler-core/src/fsharp/tests/records.rs
expression: "\ntype Triple {\n  Triple(a: Int, b: Int, c: Int)\n}\n\nfn foo() {\n  let triple = Triple(1,2,3)\n  let Triple(the_a, c: the_c, ..) = triple\n  the_c\n}\n"
---
module rec my.``mod``
type private Triple = { a: int; b: int; c: int }
let private foo (): int = begin
    let triple = { a = 1; b = 2; c = 3 }
    let { a = the_a; c = the_c } = triple
    the_c
end
