compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__records__record_spread3.snap
---
source: compiler-core/src/fsharp/tests/records.rs
expression: "\ntype Triple {\n  Triple(a: Int, b: Int, c: Int)\n}\n\nfn foo() {\n  let triple = Triple(1,2,3)\n  case triple {\n    Triple(b: the_b, ..) -> the_b\n  }\n}\n"
---
module rec my.``mod``
type private Triple = { a: int; b: int; c: int }
let private foo () = begin
    let triple = { a = 1; b = 2; c = 3 }
    match triple with
    | { b = the_b } ->
        the_b
end
