compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__records__record_updates4.snap
---
source: compiler-core/src/fsharp/tests/records.rs
expression: "\npub type Car { Car(make: String, model: String, driver: Person) }\npub type Person { Person(name: String, age: Int) }\n\nfn foo() {\n    let car = Car(make: \"Amphicar\", model: \"Model 770\", driver: Person(name: \"John Doe\", age: 27))\n    let new_p = Person(..car.driver, age: 28)\n    new_p\n}\n"
---
module rec my.``mod``
type Car = { make: string; model: string; driver: Person }
type Person = { name: string; age: int }
let private foo (): Person = begin
    let car = { make = "Amphicar"; model = "Model 770"; driver = { name = "John Doe"; age = 27 } }
    let new_p = { car.driver with age = 28 }
    new_p
end
